@@ -1,3 +1,9 @@
+2008-08-25  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* screenshot-save.c: (clean_up_temporary_dir),
+	(read_pipe_from_child):	Fix some warnings due to missing string
+	format placeholders. 
+
 2008-08-10  Emmanuele Bassi  <ebassi@gnome.org>
 
 	Bug 434580 – gnome-screenshot does not remember user settings
